# asio2exec

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  asio2exec.hpp  error.txt  main.cpp
asio/asio/include/: Makefile.am  asio.hpp
asio/asio/include/asio/: any_completion_executor.hpp  any_completion_handler.hpp  any_io_executor.hpp  append.hpp  as_tuple.hpp  associated_allocator.hpp  associated_cancellation_slot.hpp  associated_executor.hpp  associated_immediate_executor.hpp  async_result.hpp  basic_datagram_socket.hpp  basic_deadline_timer.hpp  basic_file.hpp  basic_io_object.hpp  basic_random_access_file.hpp  basic_raw_socket.hpp  basic_readable_pipe.hpp  basic_seq_packet_socket.hpp  basic_serial_port.hpp  basic_signal_set.hpp  basic_socket.hpp  basic_socket_acceptor.hpp  basic_socket_iostream.hpp  basic_socket_streambuf.hpp  basic_stream_file.hpp  basic_stream_socket.hpp  basic_streambuf.hpp  basic_streambuf_fwd.hpp  basic_waitable_timer.hpp  basic_writable_pipe.hpp  bind_allocator.hpp  bind_cancellation_slot.hpp  bind_executor.hpp  bind_immediate_executor.hpp  buffer.hpp  buffer_registration.hpp  buffered_read_stream.hpp  buffered_stream.hpp  buffered_write_stream.hpp  buffers_iterator.hpp  (+55 more)
asio/asio/include/asio/detail/: array.hpp  array_fwd.hpp  atomic_count.hpp  base_from_cancellation_state.hpp  base_from_completion_cond.hpp  bind_handler.hpp  blocking_executor_op.hpp  buffer_sequence_adapter.hpp  bulk_executor_op.hpp  chrono.hpp  completion_handler.hpp  composed_work.hpp  config.hpp  consuming_buffers.hpp  cstddef.hpp  cstdint.hpp  deadline_timer_service.hpp  descriptor_read_op.hpp  descriptor_write_op.hpp  dev_poll_reactor.hpp  event.hpp  exception.hpp  executor_function.hpp  executor_op.hpp  fenced_block.hpp  functional.hpp  future.hpp  gcc_arm_fenced_block.hpp  gcc_hppa_fenced_block.hpp  gcc_sync_fenced_block.hpp  gcc_x86_fenced_block.hpp  global.hpp  handler_alloc_helpers.hpp  handler_invoke_helpers.hpp  handler_tracking.hpp  handler_type_requirements.hpp  handler_work.hpp  initiate_defer.hpp  initiate_dispatch.hpp  initiate_post.hpp  (+87 more)
asio/asio/include/asio/execution/: allocator.hpp  any_executor.hpp  bad_executor.hpp  blocking.hpp  blocking_adaptation.hpp  bulk_execute.hpp  bulk_guarantee.hpp  connect.hpp  context.hpp  context_as.hpp  execute.hpp  executor.hpp  invocable_archetype.hpp  mapping.hpp  occupancy.hpp  operation_state.hpp  outstanding_work.hpp  prefer_only.hpp  receiver.hpp  receiver_invocation_error.hpp  relationship.hpp  schedule.hpp  scheduler.hpp  sender.hpp  set_done.hpp  set_error.hpp  set_value.hpp  start.hpp  submit.hpp
asio/asio/include/asio/experimental/: as_single.hpp  awaitable_operators.hpp  basic_channel.hpp  basic_concurrent_channel.hpp  cancellation_condition.hpp  channel.hpp  channel_error.hpp  channel_traits.hpp  co_composed.hpp  concurrent_channel.hpp  parallel_group.hpp  use_coro.hpp  use_promise.hpp
asio/asio/include/asio/generic/: basic_endpoint.hpp  datagram_protocol.hpp  raw_protocol.hpp  seq_packet_protocol.hpp  stream_protocol.hpp
asio/asio/include/asio/impl/: any_completion_executor.ipp  any_io_executor.ipp  append.hpp  as_tuple.hpp  awaitable.hpp  buffered_read_stream.hpp  buffered_write_stream.hpp  co_spawn.hpp  consign.hpp  deferred.hpp  detached.hpp  error.ipp  error_code.ipp  execution_context.hpp  executor.hpp  executor.ipp  handler_alloc_hook.ipp  io_context.hpp  multiple_exceptions.ipp  prepend.hpp  read.hpp  read_at.hpp  read_until.hpp  redirect_error.hpp  spawn.hpp  src.hpp  system_context.hpp  system_context.ipp  system_executor.hpp  thread_pool.hpp  use_awaitable.hpp  use_future.hpp  write.hpp  write_at.hpp
asio/asio/include/asio/ip/: address.hpp  address_v4.hpp  address_v4_iterator.hpp  address_v4_range.hpp  address_v6.hpp  address_v6_iterator.hpp  address_v6_range.hpp  bad_address_cast.hpp  basic_endpoint.hpp  basic_resolver.hpp  basic_resolver_iterator.hpp  basic_resolver_results.hpp  icmp.hpp  network_v4.hpp  network_v6.hpp  tcp.hpp  udp.hpp
asio/asio/include/asio/local/: basic_endpoint.hpp  datagram_protocol.hpp  seq_packet_protocol.hpp  stream_protocol.hpp
asio/asio/src/: Makefile.msc
asio/asio/src/doc/: asio.qbk  examples.qbk  history.qbk  overview.qbk  platform_macros.qbk  quickref.xml  reference.dox  reference.xsl  tutorial.qbk  using.qbk
asio/asio/src/tests/: Makefile.am
examples/: a.cpp  as_default.cpp  as_tuple.cpp  cancel.cpp  echo_server.cpp  echo_server_coro.cpp  hello_world.cpp  hello_world_coro.cpp  schedule.cpp  transfer.cpp  type_erased.cpp
(+190 files in other folders)
